Playing with fonts

--- a/apollo.html
+++ b/apollo.html
@@ -10,6 +10,13 @@
 		<title>Apollo Image Archive</title>
 		<link href='http://fonts.googleapis.com/css?family=Oswald:400,300,700' rel='stylesheet' type='text/css'>
 		<link href='http://fonts.googleapis.com/css?family=Muli:300,400,300italic,400italic' rel='stylesheet' type='text/css'>
+		<link href='http://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800' rel='stylesheet' type='text/css'>
+		<link href='http://fonts.googleapis.com/css?family=Oxygen:400,300,700' rel='stylesheet' type='text/css'>
+		<link href='http://fonts.googleapis.com/css?family=Lato:100,300,400,700,900' rel='stylesheet' type='text/css'>
+		<link href='http://fonts.googleapis.com/css?family=Libre+Baskerville' rel='stylesheet' type='text/css'>
+		<link href='http://fonts.googleapis.com/css?family=Roboto+Condensed:400,300,100' rel='stylesheet' type='text/css'>
+		<link href='http://fonts.googleapis.com/css?family=Quattrocento' rel='stylesheet' type='text/css'>
+		<link href='http://fonts.googleapis.com/css?family=Quattrocento+Sans' rel='stylesheet' type='text/css'>
 		<link href="css/bootstrap.min.css" type="text/css" rel="StyleSheet" media="all">
 		<link href="css/apollo.css" type="text/css" rel="StyleSheet" media="all">
 	</head>
@@ -44,7 +51,7 @@
 				<div class="container">
 					<div class="row">
 						<!-- <div class="span4"></div> -->
-						<div class="col-md-8 col-md-offset-2">
+						<div class="col-md-6 col-md-offset-3">
 							<div class="carousel-caption-center">
 								<p class="lead upcase">In 1961, President John F. Kennedy announced an ambitious goal of sending an American safely to the Moon before the end of the decade.</p>
 								<p class="lead upcase">On those missions the crew operated handheld cameras, capturing the closest and most remarkable images of the moon the world had ever seen.
